<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/logo"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/player" />

        <LinearLayout
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/s_curry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/pg_sm" />


        </LinearLayout>



        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_30" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_30_5" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_24_5" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_4_5" />




    </LinearLayout>


</LinearLayout>