<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:scrollbars="none"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_toEndOf="@id/ll">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_player_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/points" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/salary" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/fgm" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:text="@string/_3pts" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:gravity="center"
                android:text="@string/reb" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:text="@string/ft" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:text="@string/blk" />


            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:text="@string/ast" />


            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:text="@string/stl" />


            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/bg"
                android:fontFamily="@font/roboto_bold"

                android:text="@string/tov" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_positiontype"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_salary"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_FGM"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_PTS"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_REB"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_FT"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_BLK"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_AST"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_STL"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_TOV"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>