<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:background="@color/white"
            app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:id="@+id/tv_this_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            android:text="@string/this_season"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/tv_7games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            android:text="@string/last_7_games"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/tv_3games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            android:text="@string/last_3_games"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/transparent"
            />
        <TextView
            android:id="@+id/tv_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            android:text="@string/last_game"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>
