<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.EditTeamManagerActivity">


    <include layout="@layout/custom_app_bar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@mipmap/background_app_af"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/edit_team_manager"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-45dp"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashtag"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_black"
                    android:padding="5dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team_manager"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_black"
                    android:layout_marginStart="13dp"
                    android:padding="5dp"
                    android:textColor="@color/text_color_pg"
                    android:textAlignment="textStart"/>

                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/manager"
                        android:textSize="14sp"
                        android:textColor="@color/text_color_pg"
                        android:fontFamily="@font/roboto_black"
                        android:padding="5dp"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/status"
                        android:textColor="@color/text_color_pg"
                        android:textSize="14sp"
                        android:fontFamily="@font/roboto_black"
                        android:padding="5dp"
                        android:textAlignment="textStart"/>

                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_below="@+id/rl_header"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_dash"/>



        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_EditTeamManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_team_edit"
            tools:itemCount="5"
            />


    </LinearLayout>

</LinearLayout>